cambios en el crud del modulo cliente

--- a/src/app/cliente/actualizar-cliente/actualizar-cliente.page.html
+++ b/src/app/cliente/actualizar-cliente/actualizar-cliente.page.html
@@ -1,26 +1,73 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>actualizar-cliente</ion-title>
+    <ion-buttons>
+        <ion-back-button defaultHref="/listar-cliente"></ion-back-button>
+      </ion-buttons>
+    <ion-title>ACTUALIZAR CLIENTE</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">actualizar-cliente</ion-title>
+      
+      <ion-title size="large">ACTUALIZAR CLIENTE</ion-title>
     </ion-toolbar>
   </ion-header>
 
-<form>
+<form [formGroup]="clienteForm" (ngSubmit)="guardarcambios()">
 
-  <ion-item>  <ion-input  placeholder="Nombre o razon social" type="text"></ion-input>    </ion-item>
-  <ion-item>  <ion-input  placeholder="número de teléfono" type="text"></ion-input>    </ion-item>
-  <ion-item>  <ion-input  placeholder="DNI" type="text"></ion-input>    </ion-item>
-  <ion-item>  <ion-input  placeholder="RUC" type="text"></ion-input>    </ion-item> 
-  <ion-item>  <ion-input  placeholder="Dirección" type="text"></ion-input>    </ion-item>
-  <ion-item>  <ion-input  placeholder="Correo" type="text"></ion-input>    </ion-item>
-  <ion-item>  <ion-button type="submit" > ACTUALIZAR</ion-button>    </ion-item>
+  <ion-list lines="full">
 
+
+  <ion-item> 
+                <ion-label position="stacked">Nombre o razón social</ion-label>
+                <ion-input formControlName="nombre" type="text" placeholder="Nombre o razón social"></ion-input>
+            </ion-item>
+            
+            <ion-item> 
+                <ion-label position="stacked">Número de teléfono</ion-label>
+                <ion-input formControlName="telefono" type="tel" placeholder="Número de teléfono"></ion-input> 
+            </ion-item>
+            
+            <ion-item> 
+                <ion-label position="stacked">DNI</ion-label>
+                <ion-input formControlName="dni" type="text" placeholder="DNI"></ion-input> 
+            </ion-item>
+            
+            <ion-item> 
+                <ion-label position="stacked">RUC</ion-label>
+                <ion-input formControlName="ruc" type="text" placeholder="RUC"></ion-input> 
+            </ion-item> 
+            
+            <ion-item> 
+                <ion-label position="stacked">Dirección</ion-label>
+                <ion-input formControlName="direccion" type="text" placeholder="Dirección"></ion-input> 
+            </ion-item>
+            
+            <ion-item> 
+                <ion-label position="stacked">Correo</ion-label>
+                <ion-input formControlName="correo" type="email" placeholder="Correo"></ion-input> 
+            </ion-item>
+  <!--<ion-item>  <ion-button type="submit" > ACTUALIZAR</ion-button>    </ion-item>-->
+
+
+
+
+
+
+
+
+  </ion-list>
+
+  <div class="cajabotones">
+    <ion-button type="submit" expand="block" color="success" [disabled]="clienteForm.invalid">
+      ACTUALIZAR
+    </ion-button>
+    <ion-button type="button" expand="block" color="danger" (click)="cancelarEdicion()">
+                CANCELAR
+    </ion-button>
+  </div>
 
   
 
