--- a/src/app/cliente/listar-cliente/listar-cliente.page.html
+++ b/src/app/cliente/listar-cliente/listar-cliente.page.html
@@ -1,6 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>listar-cliente</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/menu"></ion-back-button> 
+    </ion-buttons>
+
+    <ion-title>LISTA DE CLIENTES</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -22,15 +26,15 @@
 
   
   <ion-list>
-    <ion-item *ngFor="let clien of cliente; let i=index">
-    {{ clien }}
+    <ion-item *ngFor="let clien of listaclientes; let i=index">
+    <ion-label>{{ clien.nombre }}</ion-label>
 
 
     <ion-buttons slot="end">
-      <ion-button color="primary" (click)="editarCliente(i)">
+      <ion-button color="primary" (click)="editarCliente(clien.id)">
         <ion-icon slot="icon-only" name="create"></ion-icon>
       </ion-button>
-      <ion-button color="danger" (click)="eliminarCliente(i)">
+      <ion-button color="danger" (click)="eliminarCliente(clien.id)">
         <ion-icon slot="icon-only" name="trash"></ion-icon>
       </ion-button>
     </ion-buttons>
