--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true"  fixed-slot-placement="before">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">VENTANA DE PRUEBA</ion-title>
     </ion-toolbar>
   </ion-header>
 
