--- a/src/app/producto/registrar-producto/registrar-producto.page.html
+++ b/src/app/producto/registrar-producto/registrar-producto.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>registrar-producto</ion-title>
+    <ion-title>REGISTRAR PRODUCTO</ion-title>
   </ion-toolbar>
 </ion-header>
 
