cambios de la flecha de guiar al menu

--- a/src/app/cliente/registrar-cliente/registrar-cliente.page.html
+++ b/src/app/cliente/registrar-cliente/registrar-cliente.page.html
@@ -90,6 +90,14 @@
         [disabled]="clienteForm.invalid">
         REGISTRAR
       </ion-button>
+
+      <ion-button 
+         
+        expand="block"
+        (click)="cancelar()"
+        >
+        CANCELAR
+      </ion-button>
     </ion-item>
 
   </form>
