--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -37,7 +37,7 @@
 <ion-row>
 
       <ion-col size="6">
-        <ion-card button (click)="abrirclientes()">
+        <ion-card button (click)="abrirpedido()">
           <ion-card-header>
             <ion-card-title>Pedidos</ion-card-title>
           </ion-card-header>
@@ -68,7 +68,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button routerLink="/login" routerDirection="root">
-         inicio
+         salir
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
