--- a/src/app/producto/listar-producto/listar-producto.page.html
+++ b/src/app/producto/listar-producto/listar-producto.page.html
@@ -1,5 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+
+     <ion-button routerLink="/menu">
+    <ion-icon slot="icon-only" name="arrow-back"></ion-icon> 
+  </ion-button>
+
+
     <ion-title>listar-producto</ion-title>
   </ion-toolbar>
 </ion-header>
