--- a/src/app/visualizar/visualizar.page.html
+++ b/src/app/visualizar/visualizar.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-button routerLink="/menu">
+    <ion-icon slot="icon-only" name="arrow-back"></ion-icon> 
+  </ion-button>
     <ion-title>visualizar</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,6 +10,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
+      
       <ion-title size="large">visualizar</ion-title>
     </ion-toolbar>
   </ion-header>
