--- a/src/app/cliente/listar-cliente/listar-cliente.page.html
+++ b/src/app/cliente/listar-cliente/listar-cliente.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/menu"></ion-back-button> 
-    </ion-buttons>
+    <ion-button routerLink="/menu">
+    <ion-icon slot="icon-only" name="arrow-back"></ion-icon> 
+  </ion-button>
 
     <ion-title>LISTA DE CLIENTES</ion-title>
   </ion-toolbar>
