--- a/src/app/pedido/registrar-pedido/registrar-pedido.page.html
+++ b/src/app/pedido/registrar-pedido/registrar-pedido.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-button routerLink="/menu">
+    <ion-icon slot="icon-only" name="arrow-back"></ion-icon> 
+  </ion-button>
     <ion-title>registrar-pedido</ion-title>
   </ion-toolbar>
 </ion-header>
