--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,8 +13,8 @@
 
   <form (ngSubmit)="login()">
     <ion-item>
-      <ion-label position="floating">Usuario</ion-label>
-      <ion-input type="text" [(ngModel)]="username" name="username" required></ion-input>
+      <ion-label position="floating">Correo</ion-label>
+      <ion-input type="text" [(ngModel)]="correo" name="correo" required></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Contraseña</ion-label>
