cambio de formas

--- a/src/app/cliente/listar-cliente/listar-cliente.page.html
+++ b/src/app/cliente/listar-cliente/listar-cliente.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-button routerLink="/menu">
+    <ion-button (click)="volverMenu()">
     <ion-icon slot="icon-only" name="arrow-back"></ion-icon> 
   </ion-button>
 
