--- a/src/app/producto/listar-producto/listar-producto.page.html
+++ b/src/app/producto/listar-producto/listar-producto.page.html
@@ -1,19 +1,19 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
 
-     <ion-button routerLink="/menu">
+     <ion-button (click)="volverMenu()">
     <ion-icon slot="icon-only" name="arrow-back"></ion-icon> 
   </ion-button>
 
 
-    <ion-title>listar-producto</ion-title>
+    <ion-title>LISTA DE PRODUCTOS</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">listar-producto</ion-title>
+      <ion-title size="large">LISTA DE PRODUCTOS</ion-title>
     </ion-toolbar>
   </ion-header>
 
