--- a/src/app/producto/registrar-producto/registrar-producto.page.html
+++ b/src/app/producto/registrar-producto/registrar-producto.page.html
@@ -85,12 +85,16 @@
 </ion-content>-->
 
 
-<ion-content [fullscreen]="true">
+
+<!--separacion de soluciones xd-->
+
+
+<!--<ion-content [fullscreen]="true">
   <div class="form-container">
     <form>
 
       <div class="image-preview">
-        <!--<img src="placeholder.jpg" alt="Preview">-->
+        <img src="placeholder.jpg" alt="Preview">
         <ion-button fill="clear" color="danger">
           <ion-icon name="close-circle"></ion-icon>
         </ion-button>
@@ -105,11 +109,11 @@
       <input 
         type="file" 
         accept="image/*" 
-        style="display: none;">
+        style="display: none;">-->
 
         <!--<input type="file" accept="image/png, image/jpeg">-->
 
-      <ion-item>
+      <!--<ion-item>
         <ion-label position="floating">Nombre del Producto</ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
@@ -151,6 +155,142 @@
         type="submit" 
         class="submit-btn">
         GUARDAR PRODUCTO
+      </ion-button>
+    </form>
+  </div>
+</ion-content>-->
+
+<!-- ootrrrra opcion-->
+
+
+
+
+
+
+<ion-content [fullscreen]="true">
+  <div class="form-container">
+    <form [formGroup]="productoForm" (ngSubmit)="registrarProducto()">
+      
+      <div class="image-preview" *ngIf="imagenPreviewUrl">
+        <img [src]="imagenPreviewUrl" alt="Previsualización de Imagen"> 
+        <ion-button fill="clear" color="danger" (click)="eliminarImagen()">
+          <ion-icon name="close-circle"></ion-icon>
+        </ion-button>
+      </div>
+
+      <ion-button expand="block" fill="outline" (click)="seleccionarImagen()" type="button">
+        <ion-icon slot="start" name="camera"></ion-icon>
+        {{ selectedFile ? 'CAMBIAR IMAGEN' : 'AGREGAR IMAGEN' }}
+      </ion-button>
+
+      <input 
+        type="file" 
+        #fileInput 
+        id="file-input-producto"
+        accept="image/*" 
+        (change)="onFileSelected($event)" 
+        style="display: none;">
+
+      <ion-item>
+        <ion-label position="floating">Nombre del Producto *</ion-label>
+        <ion-input 
+          id="nombre-producto"
+          type="text" 
+          formControlName="nombre" 
+          required>
+        </ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">SKU / Código Modelo *</ion-label>
+        <ion-input 
+          id="sku-producto"
+          type="text" 
+          formControlName="sku" 
+          required>
+        </ion-input>
+      </ion-item>
+      
+      <ion-item>
+        <ion-label>Género *</ion-label>
+        <ion-select 
+          id="genero-producto"
+          formControlName="genero" 
+          required 
+          interface="popover">
+          <ion-select-option value="Unisex">Unisex</ion-select-option>
+          <ion-select-option value="Varon">Varón</ion-select-option>
+          <ion-select-option value="Mujer">Mujer</ion-select-option>
+        </ion-select>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Precio *</ion-label>
+        <ion-input 
+          id="precio-producto"
+          type="number" 
+          formControlName="precio" 
+          min="0.01"
+          step="0.01"
+          required>
+        </ion-input>
+      </ion-item>
+      
+      <ion-list-header lines="inset">
+        <ion-label>STOCK POR TALLA (Cantidades)</ion-label>
+      </ion-list-header>
+      
+      <ion-item>
+        <ion-label>Talla S</ion-label>
+        <ion-input 
+          id="stock-s"
+          type="number" 
+          formControlName="stock_s" 
+          min="0" 
+          placeholder="0" 
+          required>
+        </ion-input>
+      </ion-item>
+      
+      <ion-item>
+        <ion-label>Talla M</ion-label>
+        <ion-input 
+          id="stock-m"
+          type="number" 
+          formControlName="stock_m" 
+          min="0" 
+          placeholder="0" 
+          required>
+        </ion-input>
+      </ion-item>
+      
+      <ion-item>
+        <ion-label>Talla L</ion-label>
+        <ion-input 
+          id="stock-l"
+          type="number" 
+          formControlName="stock_l" 
+          min="0" 
+          placeholder="0" 
+          required>
+        </ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Descripción</ion-label>
+        <ion-textarea 
+          id="descripcion-producto"
+          formControlName="descripcion" 
+          rows="3">
+        </ion-textarea>
+      </ion-item>
+
+      <ion-button 
+        expand="block" 
+        type="submit" 
+        class="submit-btn"
+        [disabled]="productoForm.invalid || !selectedFile || isLoading">
+        {{ isLoading ? 'GUARDANDO...' : 'GUARDAR PRODUCTO' }}
       </ion-button>
     </form>
   </div>
