--- a/src/app/producto/listar-producto/listar-producto.page.html
+++ b/src/app/producto/listar-producto/listar-producto.page.html
@@ -98,10 +98,10 @@
         <ion-button 
               expand="block" 
               color="secondary" 
-               
+               (click)="editarProducto(produ.id)"
               
             >
-              <ion-icon slot="start" name="create-outline"></ion-icon>
+              <ion-icon slot="start" name="create-outline" ></ion-icon>
               Actualizar
             </ion-button>
 
