mas actualizaciones de actualizar datos

--- a/src/app/producto/actualizar-producto/actualizar-producto.page.html
+++ b/src/app/producto/actualizar-producto/actualizar-producto.page.html
@@ -137,7 +137,7 @@
 
          <ion-row>
 
-          <ion-col>
+          <ion-col size="6">
              <!-- ✅ Cambio en validación: permite actualizar sin cambiar imagen -->
       <ion-button 
         expand="block" 
@@ -150,8 +150,11 @@
 
           </ion-col>
 
-          <ion-col>
-           <ion-button (click)="cancelar()">
+          <ion-col  size="6">
+           <ion-button 
+            expand= "block" 
+            fill="outline" 
+            (click)="cancelar()">
              CANCELAR
                
 
