AGREGANDO EL BOTON DE ELIMINAR EN PRODUCTOS, LISTAR PRODUCTOS

--- a/src/app/producto/listar-producto/listar-producto.page.html
+++ b/src/app/producto/listar-producto/listar-producto.page.html
@@ -111,7 +111,7 @@
           <ion-button 
               expand="block" 
               color="danger" 
-              
+              (click)="eliminarProducto(produ.id)"
               
             >
               <ion-icon slot="start" name="trash-outline"></ion-icon>
